Pequeñas mejoras en la vista del usuario

--- a/Web/mis-datos/index.html
+++ b/Web/mis-datos/index.html
@@ -133,7 +133,7 @@
                                             <div class="col-md-8">
                                                 <div class="row">
                                                     <div class="mb-3 col-12">
-                                                        <label class="form-label" for="txtInputUsuarioDNI">Documento Nacional de Identidad (DNI)</label>
+                                                        <label class="form-label" for="txtInputUsuarioDNI">Documento Nacional de Identidad (DNI) *</label>
                                                         <input type="text" class="form-control" id="txtInputUsuarioDNI" placeholder="Digite su DNI">
                                                     </div>
                                                     <div class="mb-3 col-6">
@@ -143,7 +143,7 @@
                                                         <input type="text" class="form-control mb-2" id="txtInputUsuarioApellido" placeholder="Apellidos Completos" disabled readonly>
                                                     </div>
                                                     <div class="mb-3 col-6">
-                                                        <label class="form-label" for="cboSelectUsuarioGenero">Seleccionar Género</label>
+                                                        <label class="form-label" for="cboSelectUsuarioGenero">Seleccionar Género *</label>
                                                         <select class="form-select form-control" id="cboSelectUsuarioGenero">
                                                             <option value="0" id="sinGenero">Género</option>
                                                             <option value="Masculino" id="Masculino">Masculino</option>
@@ -151,13 +151,13 @@
                                                         </select>
                                                     </div>
                                                     <div class="mb-3 col-6">
-                                                        <label class="form-label" for="cboSelectUsuarioEstadoCivil">Seleccionar Estado Civil</label>
+                                                        <label class="form-label" for="cboSelectUsuarioEstadoCivil">Seleccionar Estado Civil *</label>
                                                         <select class="form-select form-control" id="cboSelectUsuarioEstadoCivil">
                                                             <option value="0" id="sinEstadoCivil">Estado Civil</option>
-                                                            <option value="Viudo" id="Viudo">Viudo</option>
-                                                            <option value="Soltero" id="Soltero">Soltero</option>
-                                                            <option value="Casado" id="Casado">Casado</option>
-                                                            <option value="Divorciado" id="Divorciado">Divorciado</option>
+                                                            <option value="Viudo" id="Viudo">Viudo (a)</option>
+                                                            <option value="Soltero" id="Soltero">Soltero (a)</option>
+                                                            <option value="Casado" id="Casado">Casado (a)</option>
+                                                            <option value="Divorciado" id="Divorciado">Divorciado (a)</option>
                                                         </select>
                                                     </div>
                                                     <div class="mb-3 col-12">
@@ -165,11 +165,11 @@
                                                         <input type="text" class="form-control" id="txtInputUsuarioCorreo" placeholder="Digite su correo electrónico" disabled readonly>
                                                     </div>
                                                     <div class="mb-3 col-6">
-                                                        <label class="form-label" for="txtInputUsuarioDireccion">Dirección actual</label>
+                                                        <label class="form-label" for="txtInputUsuarioDireccion">Dirección actual *</label>
                                                         <input type="text" class="form-control" id="txtInputUsuarioDireccion" placeholder="Digite su dirección actual">
                                                     </div>
                                                     <div class="mb-3 col-6">
-                                                        <label class="form-label" for="txtInputUsuarioTelefono">Número de celular</label>
+                                                        <label class="form-label" for="txtInputUsuarioTelefono">Número de celular *</label>
                                                         <input type="text" class="form-control" id="txtInputUsuarioTelefono" placeholder="Digite su número de teléfono">
                                                     </div>
                                                     <div class="mb-3 col-6">
