--- a/Web/mis-mascotas/index.html
+++ b/Web/mis-mascotas/index.html
@@ -122,28 +122,36 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="row">
-                                    <div class="mb-2 col-12">
+                                    <div class="mb-1 col-12">
+                                        <label for="txtInputMascotaNombre">Nombre *</label>
                                         <input type="text" class="form-control" id="txtInputMascotaNombre" placeholder="Ingresar Nombre">
                                     </div>
-                                    <div class="mb-2 col-6">
-                                        <input type="number" class="form-control mb-2" id="txtInputMascotaPeso" placeholder="Ingresar Peso" min="1" max="500" step="0.01">
+                                    <div class="mb-1 col-6">
+                                        <label for="txtInputMascotaPeso">Peso (kg) *</label>
+                                        <input type="number" class="form-control" id="txtInputMascotaPeso" placeholder="Ingresar Peso" min="1" max="500" step="0.01">
                                     </div>
-                                    <div class="mb-2 col-6">
-                                        <input type="number" class="form-control mb-2" id="txtInputMascotaTalla" placeholder="Ingresar Talla" min="1" max="500" step="0.01">
+                                    <div class="mb-1 col-6">
+                                        <label for="txtInputMascotaTalla">Talla (cm) *</label>
+                                        <input type="number" class="form-control" id="txtInputMascotaTalla" placeholder="Ingresar Talla" min="1" max="500" step="0.01">
                                     </div>
-                                    <div class="mb-2 col-12">
-                                        <input type="text" class="form-control mb-2" id="txtInputMascotaPresentacion" placeholder="Ingresar Presentación">
+                                    <div class="mb-1 col-12">
+                                        <label for="txtInputMascotaPresentacion">Descripción *</label>
+                                        <input type="text" class="form-control" id="txtInputMascotaPresentacion" placeholder="Ingresar Presentación">
                                     </div>
-                                    <div class="mb-2 col-6">
+                                    <div class="mb-1 col-6">
+                                        <label for="cboSelectMascotaEspecie">Especie *</label>
                                         <select class="form-select form-control" id="cboSelectMascotaEspecie"></select>
                                     </div>
-                                    <div class="mb-2 col-6">
+                                    <div class="mb-1 col-6">
+                                        <label for="cboSelectMascotaRaza">Raza *</label>
                                         <select class="form-select form-control" id="cboSelectMascotaRaza"></select>
                                     </div>
-                                    <div class="mb-2 col-6">
+                                    <div class="mb-1 col-6">
+                                        <label for="cboSelectMascotaGenero">Género *</label>
                                         <select class="form-select form-control" id="cboSelectMascotaGenero"></select>
                                     </div>
-                                    <div class="mb-2 col-6">
+                                    <div class="mb-1 col-6">
+                                        <label for="cboSelectMascotaCondicion">Condición *</label>
                                         <select class="form-select form-control" id="cboSelectMascotaCondicion"></select>
                                     </div>
                                 </div>
