--- a/Web/registrar-mascota/index.html
+++ b/Web/registrar-mascota/index.html
@@ -133,23 +133,23 @@
                                             <div class="col-md-8">
                                                 <div class="row">
                                                     <div class="mb-3 col-12">
-                                                        <label class="form-label" for="txtInputMascotaNombre">Nombre de la mascota</label>
+                                                        <label class="form-label" for="txtInputMascotaNombre">Nombre de la mascota *</label>
                                                         <input type="text" class="form-control" id="txtInputMascotaNombre" placeholder="Ingresar Nombre">
                                                     </div>
                                                     <div class="mb-3 col-6">
-                                                        <label class="form-label" for="txtInputMascotaPeso">Peso de la mascota (kg)</label>
+                                                        <label class="form-label" for="txtInputMascotaPeso">Peso de la mascota (kg) *</label>
                                                         <input type="number" class="form-control mb-2" id="txtInputMascotaPeso" placeholder="Ingresar Peso" min="0.1" max="100" step="0.01">
                                                     </div>
                                                     <div class="mb-3 col-6">
-                                                        <label class="form-label" for="txtInputMascotaTalla">Talla de la mascota (cm)</label>
+                                                        <label class="form-label" for="txtInputMascotaTalla">Talla de la mascota (cm) *</label>
                                                         <input type="number" class="form-control mb-2" id="txtInputMascotaTalla" placeholder="Ingresar Talla" min="0.1" max="200" step="0.01">
                                                     </div>
                                                     <div class="mb-3 col-12">
-                                                        <label class="form-label" for="txtInputMascotaPresentacion">Presentación de la mascota</label>
+                                                        <label class="form-label" for="txtInputMascotaPresentacion">Presentación de la mascota *</label>
                                                         <input type="text" class="form-control mb-2" id="txtInputMascotaPresentacion" placeholder="Ingresar Presentación">
                                                     </div>
                                                     <div class="mb-3 col-6">
-                                                        <label class="form-label" for="cboSelectMascotaEspecie">Seleccionar Especie</label>
+                                                        <label class="form-label" for="cboSelectMascotaEspecie">Seleccionar Especie *</label>
                                                         <select class="form-select form-control" id="cboSelectMascotaEspecie">
                                                             <option value="0" id="sinEspecie">Especie</option>
                                                             <option value="VO3zLzr8Mq5ZRoft61yj" id="VO3zLzr8Mq5ZRoft61yj">Canino</option>
@@ -157,13 +157,13 @@
                                                         </select>
                                                     </div>
                                                     <div class="mb-3 col-6">
-                                                        <label class="form-label" for="cboSelectMascotaRaza">Seleccionar Raza</label>
+                                                        <label class="form-label" for="cboSelectMascotaRaza">Seleccionar Raza *</label>
                                                         <select class="form-select form-control" id="cboSelectMascotaRaza">
                                                             <option value="0" id="sinRaza">Raza</option>
                                                         </select>
                                                     </div>
                                                     <div class="mb-3 col-6">
-                                                        <label class="form-label" for="cboSelectMascotaGenero">Seleccionar Género</label>
+                                                        <label class="form-label" for="cboSelectMascotaGenero">Seleccionar Género *</label>
                                                         <select class="form-select form-control" id="cboSelectMascotaGenero">
                                                             <option value="0" id="sinGenero">Género</option>
                                                             <option value="Macho">Macho</option>
@@ -171,7 +171,7 @@
                                                         </select>
                                                     </div>
                                                     <div class="mb-3 col-6">
-                                                        <label class="form-label" for="cboSelectMascotaCondicion">Seleccionar Condición</label>
+                                                        <label class="form-label" for="cboSelectMascotaCondicion">Seleccionar Condición *</label>
                                                         <select class="form-select form-control" id="cboSelectMascotaCondicion">
                                                             <option value="0" id="sinCondicion">Condición</option>
                                                             <option value="Con Hogar">Con Hogar</option>
