--- a/Web/panel/index.html
+++ b/Web/panel/index.html
@@ -26,7 +26,7 @@
 							<span class="align-middle">Perfil</span>
 						</a>
 					</li> -->
-					<li class="sidebar-header">Páginas</li>
+					<li class="sidebar-header">Mantenimiento</li>
 					<li class="sidebar-item">
 						<a data-target="#ui" data-toggle="collapse" class="sidebar-link collapsed">
 							<i class="align-middle" data-feather="users"></i>
@@ -109,6 +109,9 @@
 				<a class="sidebar-toggle d-flex">
 					<i class="hamburger align-self-center"></i>
 				</a>
+				<div class="d-flex justify-content-center align-items-center w-100">
+					<h3 class="pt-2">Mantenimiento de <span class="badge bg-primary" id="txtTitulo"></span></h3>
+				</div>
 				<div class="navbar-collapse collapse">
 					<ul class="navbar-nav navbar-align">
 						<li class="nav-item dropdown">
