avanzando historial de vacunas listar - aagregar

--- a/Web/panel/index.html
+++ b/Web/panel/index.html
@@ -109,8 +109,8 @@
 				<a class="sidebar-toggle d-flex">
 					<i class="hamburger align-self-center"></i>
 				</a>
-				<div class="d-flex justify-content-center align-items-center w-100">
-					<h3 class="pt-2">Mantenimiento de <span class="badge bg-primary" id="txtTitulo"></span></h3>
+				<div class="d-flex w-100">
+					<h3 class="pt-2">Mantenimiento de <span class="badge bg-primary" id="txtTitulo">...</span></h3>
 				</div>
 				<div class="navbar-collapse collapse">
 					<ul class="navbar-nav navbar-align">
@@ -496,7 +496,7 @@
 					</div>
 				</div>
 				<!-- Contenido Vacuna -->
-
+				
 				<!-- Contenido Historial -->
 				<div class="row" id="formHistorialVacunas">
 					<div class="col-12">
