Vista de historial de vacunas del usuario

--- a/Web/consultas/index.html
+++ b/Web/consultas/index.html
@@ -67,9 +67,9 @@
         Consulta todas las dudas que tengas con nuestro reconocido grupo de médicos veterinarios, envíanos un mensaje y nuestros profesionales te ayudarán a tomar la mejor decisión para el engreído de la casa.
       </p>
       <div class="links">
-        <a href="https://play.google.com/store/apps/developer?id=LAGA" rel="nofollow" target="_self" class="ps">
+        <!-- <a href="https://play.google.com/store/apps/developer?id=LAGA" rel="nofollow" target="_self" class="ps">
           <img src="../assets/img/icons/playstore.svg" alt="Play Store">Descargar App
-        </a>
+        </a> -->
         <a href="https://wa.me/51944946824" rel="nofollow" target="_self" class="wa">
           <img src="../assets/img/icons/whatsapp.svg" alt="WhatsApp">Usar WhatsApp
         </a>
