--- a/Web/mis-mascotas/index.html
+++ b/Web/mis-mascotas/index.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="../assets/css/flaticon.css">
     <link rel="stylesheet" href="../assets/css/slick-nav.css">
     <link rel="stylesheet" href="../assets/css/styles.css">
+
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <!-- Header start -->
