meta robots agreado

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Pets Control</title>
     <meta name="author" content="Grupo 01 - Titulación Software 2021">
     <meta name="copyright" content="PET ID">
-    <meta name="robots" content="noindex">
+    <meta name="robots" content="index">
     <link rel="icon" type="image/png" href="./Web/assets/img/favicon.png">
 </head>
 <body>
