--- a/Web/consultas/index.html
+++ b/Web/consultas/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pets Control | Consultas</title>
+  <meta name="author" content="Grupo 01 - Titulación Software 2021">
+  <meta name="copyright" content="PET ID">
+  <meta name="robots" content="noindex">
   <link rel="icon" type="image/png" href="../assets/img/favicon.png">
   <link rel="stylesheet" href="./styles.css">
 </head>
